# AIFund

./: .gitignore  README.md  package.json
.claude/: settings.local.json
ai-service/: .env.example  pyproject.toml  requirements.txt
ai-service/app/: main.py
ai-service/app/api/: __init__.py  analyze.py  chat.py  portfolio.py
ai-service/app/models/: __init__.py
backend/: .env.example  package-lock.json  package.json
backend/src/: index.ts
backend/src/routes/: ai.ts  funds.ts  market.ts  portfolio.ts
data/funds/: funds.json  portfolios.json
data/market/: overview.json
data/prompts/: ai_advisor.txt
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/api/: index.ts
frontend/src/components/: FundCard.tsx  Layout.tsx  NavChart.tsx  ui.tsx
frontend/src/pages/: AIAdvisor.tsx  FundDetail.tsx  Funds.tsx  Home.tsx  Portfolio.tsx
frontend/src/styles/: index.css
frontend/src/types/: index.ts
frontend/src/utils/: index.ts
scripts/: start-dev.sh  stop.sh
